--- a/UK-TUG-report/UK-TUG-report.tex
+++ b/UK-TUG-report/UK-TUG-report.tex
@@ -29,7 +29,7 @@
 
 \section{Introduction}
 
-As described in the proposal for the \url{learlatex.org} site, the project is
+As described in the proposal for the \url{learnlatex.org} site, the project is
 focussed on creating an interactive website to allow new users to learn to use
 \LaTeX{} as a document preparation tool. The aims were
 \begin{enumerate}
