--- a/UK-TUG-report/UK-TUG-report.tex
+++ b/UK-TUG-report/UK-TUG-report.tex
@@ -118,7 +118,7 @@ interface.
 
 \section{Site development}
 
-We development, including graphical design and more fundamental structural
+Web development, including graphical design and more fundamental structural
 work, was carried out by Jonas Jared Jacek (\url{https://www.jonas.me/}). The
 initial web design was based on a simple GitHub Pages template. Jonas developed
 the current appearance (Figure~\ref{fgr:site}), which is designed following
