--- a/UK-TUG-report/UK-TUG-report.tex
+++ b/UK-TUG-report/UK-TUG-report.tex
@@ -83,7 +83,7 @@ resulted in
   \item French
   \item Portuguese
   \item Vietnamese
-  \item Trukish
+  \item Turkish
   \item Marathi
 \end{itemize}
 translations being available in full. Other translations are in progress but
