Extend comments on Overleaf

--- a/UK-TUG-report/UK-TUG-report.tex
+++ b/UK-TUG-report/UK-TUG-report.tex
@@ -114,7 +114,8 @@ or an account with any site.
 In parallel to the in-place set up, we have also worked with Overleaf to ensure
 that it is possible to use the examples directly on that site. This works using
 their public \acro{api} and so requires no support beyond that documented
-interface.
+interface. The \acro{api} was extended by Overleaf to support the multiple
+input files that some of the examples need. 
 
 \section{Site development}
 
