working links for abbreviated URL

--- a/UK-TUG-report/UK-TUG-report.tex
+++ b/UK-TUG-report/UK-TUG-report.tex
@@ -21,7 +21,7 @@
 
 \author{Joseph Wright\thanks{\email{joseph.wright@morningstar2.co.uk}}}
 \date{March 2021}
-\title{The \url{learnlatex.org} project\\Grant report to UK-TUG}
+\title{The \nolinkurl{learnlatex.org} project\\Grant report to UK-TUG}
 
 \begin{document}
 
@@ -29,7 +29,7 @@
 
 \section{Introduction}
 
-As described in the proposal for the \url{learnlatex.org} site, the project is
+As described in the proposal for the \href{https://learnlatex.org}{\nolinkurl{learnlatex.org}} site, the project is
 focussed on creating an interactive website to allow new users to learn to use
 \LaTeX{} as a document preparation tool. The aims were
 \begin{enumerate}
@@ -99,7 +99,7 @@ David Carlisle has led efforts to develop suitable online compilation support
 for the site. He initially explored a number of third-party set ups, which were
 useful for development but which presented challenges in terms of installation
 version, support for \foreign{e.g.}~up-\TeX{} and other tools. He therefore
-established a secondary site, \url{latexcgi.xyz}. This provides online
+established a secondary site, \href{https://latexcgi.xyz}{\nolinkurl{latexcgi.xyz}}. This provides online
 compilation and returns a PDF. The latter is set up to display using
 \texttt{PDF.js}, as this is the best approach for inline display in a
 cross-platform way. At present, this web service is running on a low-cost
@@ -126,7 +126,7 @@ the current appearance (Figure~\ref{fgr:site}), which is designed following
 current \enquote{responsive} web standards.
 \begin{figure}
   \includegraphics[width = \textwidth]{learnlatex-screenshot}
-  \caption{Main page of the \url{learnlatex.org} site in English.\label{fgr:site}}
+  \caption{Main page of the \href{https://learnlatex.org}{\nolinkurl{learnlatex.org}} site in English.\label{fgr:site}}
 \end{figure}
 
 The development work ranged over several different areas. Jonas made
@@ -138,7 +138,7 @@ the site, which arose after he was engaged and a budget was agreed.
 
 \section{Conclusions}
 
-Work on \url{learnlatex.org} has proceeded largely as projected. The site is
+Work on  \href{https://learnlatex.org}{\nolinkurl{learnlatex.org}} has proceeded largely as projected. The site is
 now live in seven languages and we are seeing a flow of users. Promotion is
 ongoing, including an upcoming guest blog post to Overleaf. The costs of the
 site itself are now covered; future funding may be needed to support online
