modify wording about backend funding

--- a/UK-TUG-report/UK-TUG-report.tex
+++ b/UK-TUG-report/UK-TUG-report.tex
@@ -99,12 +99,13 @@ David Carlisle has led efforts to develop suitable online compilation support
 for the site. He initially explored a number of third-party set ups, which were
 useful for development but which presented challenges in terms of installation
 version, support for \foreign{e.g.}~up-\TeX{} and other tools. He therefore
-established a secondary site, \href{https://latexcgi.xyz}{\nolinkurl{latexcgi.xyz}}. This provides online
+established a secondary site, \href{https://latexcgi.xyz}{\nolinkurl{latexcgi.xyz}}.
+This provides online
 compilation and returns a PDF. The latter is set up to display using
 \texttt{PDF.js}, as this is the best approach for inline display in a
 cross-platform way. At present, this web service is running on a low-cost
-platform. Future funding support may be required as the site becomes more
-widely used: this will be handled in separate applications to relevant bodies.
+platform at David's expense. Future funding support will be required after the one
+year trial hosting licence expires. This will be handled in separate applications to relevant bodies.
 
 To support compilation, David has also set up in-place editing of the code
 examples in the site. This again uses standard web tools and means that a user
